tests/NormalTests/paczka1/fuzzy1/29666010.err
Error in line 4: TMDLs0uh S275 80,1
Error in line 1: 6GAoB0T6c8G S275 78,7
Error in line 15: Ic6t1 A336 40,0
Error in line 17: Ic6t1 S874 39,9
Error in line 23: DMuj53em S874 87,9
Error in line 26: 6GAoB0T6c8G A336 67,R
Error in line 20: Ic6t1 A336 32,0
Error in line 28: Ic6t1 S&67 102,6
Error in line 27: Ic6t1 S867 38,3
Error in line 19: 6GAoB0T6c8G S867 7,0
Error in line 30: 6GAoB0T6c8G A336 124,8
